...
    "settings.privacySecurity.zeroServers": {
      "extractionState": "stale",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Zero Servers"
          }
        }
      }
    },
    "settings.privacySecurity.zeroServersDescription": {
      "extractionState": "stale",
...
